# Py_WEB_14

./: .gitignore  Dockerfile  README.en.md  README.md  alembic.ini  docker-compose-db.yml  docker-compose.yml  entrypoint.sh  env_example  pyproject.toml  requirements.txt  run.sh  sendgrid_example.env
alembic/versions/: aea8155ccc3e_update_models_to_match_database.py  f539b13855fd_init.py
docs/: Dockerfile  Makefile  build.sh  conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
hw14_mkdocs/: mkdocs.yml  serve.sh
my_mkdocs/: mkdocs.yml
my_mkdocs/docs/: index.md
pydoc/: pydoc_serve.sh
pytest/: conftest.py  test.sqlite  test_contacts_route.py  test_users_route.py
src/: main.py  requirements.txt  test_contacts_route.py
src/alembic/versions/: 231732f1db85_confirmed_email.py  428fa062fe1f_confirmed_email.py
src/config/: config.py
src/database/: db.py  models.py
src/db/: database.py  models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: auth.py  contact.py  email.py  user.py
src/services/: auth.py  auth_token.py  cloudinary.py  emails.py  role.py
src/services/templates/: confirm_email.html
src/templates/: index.html  login.html
src/utils/: seed.py
unittest/: repository_contacts_unit_test.py
