[tool.poetry]
name = "py-web-13"
version = "0.1.0"
description = ""
authors = ["Serghei <siracencoserghei@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "2.9.9"
pydantic = {extras = ["email"], version = "^2.4.2"}
alembic = "^1.12.1"
jinja2 = "^3.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
pydantic-settings = "^2.2.1"
fastapi-mail = "^1.4.1"
redis = "^5.0.3"
twilio = "^9.0.3"
sendgrid = "^6.11.0"
bcrypt = "4.0.1"
faker = "^24.7.1"
asyncio = "^3.4.3"
aiohttp = "^3.9.3"
colorlog = "^6.8.2"
cloudinary = "^1.39.1"
poetry-plugin-export = "^1.7.1"
fastapi-limiter = "^0.1.6"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
