[tool.poetry]
name = "py-web-14"
version = "0.1.0"
description = ""
authors = ["Serghei <siracencoserghei@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "2.9.9"
pydantic = {extras = ["email"], version = "^2.4.2"}
alembic = "^1.12.1"
jinja2 = "^3.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
pydantic-settings = "^2.2.1"
fastapi-mail = "^1.4.1"
redis = "^5.0.3"
twilio = "^9.0.3"
sendgrid = "^6.11.0"
bcrypt = "4.0.1"
faker = "^24.7.1"
asyncio = "^3.4.3"
aiohttp = "^3.9.3"
colorlog = "^6.8.2"
cloudinary = "^1.39.1"
poetry-plugin-export = "^1.7.1"
fastapi-limiter = "^0.1.6"
mkdocs = "^1.5.3"
mkdocstrings = "0.24.2"
psycopg2 = "^2.9.9"
parameterized = "^0.9.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"
mkdocstrings-python = "^1.9.2"
mkdocs-markdownextradata-plugin = "^0.2.5"
pymdown-extensions = "^10.7.1"
markdown = "^3.5"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.6"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
